--- a/Sim/Base.lproj/Main.storyboard
+++ b/Sim/Base.lproj/Main.storyboard
@@ -645,17 +645,66 @@
                 <customObject id="Voe-Tx-rLC" customClass="AppDelegate" customModule="Sim" customModuleProvider="target"/>
                 <customObject id="Ady-hI-5gd" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="75" y="0.0"/>
+            <point key="canvasLocation" x="32" y="-362"/>
         </scene>
         <!--Window Controller-->
         <scene sceneID="R2V-B0-nI4">
             <objects>
-                <windowController id="B8D-0N-5wS" sceneMemberID="viewController">
+                <windowController id="B8D-0N-5wS" customClass="SMWindowController" customModule="Sim" customModuleProvider="target" sceneMemberID="viewController">
                     <window key="window" title="Sim" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" oneShot="NO" releasedWhenClosed="NO" showsToolbarButton="NO" visibleAtLaunch="NO" animationBehavior="default" id="IQv-IB-iLA">
                         <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
-                        <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
-                        <rect key="contentRect" x="196" y="240" width="480" height="270"/>
+                        <rect key="contentRect" x="196" y="240" width="1280" height="800"/>
                         <rect key="screenRect" x="0.0" y="0.0" width="1680" height="1027"/>
+                        <value key="minSize" type="size" width="960" height="600"/>
+                        <toolbar key="toolbar" implicitIdentifier="B90EE6E0-76EF-4143-9EA4-3B263749BEE4" autosavesConfiguration="NO" displayMode="iconOnly" sizeMode="regular" id="4ST-jV-lje">
+                            <allowedToolbarItems>
+                                <toolbarItem implicitItemIdentifier="C1011A43-6ECA-4E83-B76C-678B628083E8" label="Toggle Simulation" paletteLabel="Toggle Simulation" image="Play" id="h7J-lA-1j8">
+                                    <nil key="toolTip"/>
+                                    <size key="minSize" width="35" height="25"/>
+                                    <size key="maxSize" width="35" height="25"/>
+                                    <button key="view" verticalHuggingPriority="750" id="nTj-nW-cXz">
+                                        <rect key="frame" x="33" y="14" width="35" height="25"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                        <buttonCell key="cell" type="roundTextured" bezelStyle="texturedRounded" image="Play" imagePosition="only" alignment="center" lineBreakMode="truncatingTail" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="ikV-RC-oka">
+                                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                            <font key="font" metaFont="system"/>
+                                        </buttonCell>
+                                        <connections>
+                                            <action selector="toggleSimulationPressed:" target="B8D-0N-5wS" id="NRQ-tP-sP5"/>
+                                        </connections>
+                                    </button>
+                                </toolbarItem>
+                                <toolbarItem implicitItemIdentifier="EFBDAB29-512E-4C2D-B7E0-B2E404A0131B" label="Zoom" paletteLabel="Zoom" id="xY0-4X-Hm9">
+                                    <nil key="toolTip"/>
+                                    <size key="minSize" width="99" height="24"/>
+                                    <size key="maxSize" width="104" height="25"/>
+                                    <segmentedControl key="view" verticalHuggingPriority="750" id="h2G-Ml-gOn">
+                                        <rect key="frame" x="0.0" y="14" width="99" height="25"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                        <segmentedCell key="cell" borderStyle="border" alignment="left" style="texturedSquare" trackingMode="momentary" id="Q4n-dQ-0Pi">
+                                            <font key="font" metaFont="system"/>
+                                            <segments>
+                                                <segment toolTip="Zoom Out" image="ZoomOut" width="32"/>
+                                                <segment toolTip="Zoom To Fit" image="ZoomToFit" width="32"/>
+                                                <segment toolTip="Zoom In" image="ZoomIn">
+                                                    <nil key="label"/>
+                                                </segment>
+                                            </segments>
+                                        </segmentedCell>
+                                        <connections>
+                                            <action selector="zoomPressed:" target="B8D-0N-5wS" id="aEg-Ki-8Yn"/>
+                                        </connections>
+                                    </segmentedControl>
+                                </toolbarItem>
+                                <toolbarItem implicitItemIdentifier="NSToolbarSpaceItem" id="lxU-hP-WYY"/>
+                                <toolbarItem implicitItemIdentifier="NSToolbarFlexibleSpaceItem" id="ySA-dW-3d7"/>
+                            </allowedToolbarItems>
+                            <defaultToolbarItems>
+                                <toolbarItem reference="h7J-lA-1j8"/>
+                                <toolbarItem reference="xY0-4X-Hm9"/>
+                                <toolbarItem reference="ySA-dW-3d7"/>
+                            </defaultToolbarItems>
+                        </toolbar>
                     </window>
                     <connections>
                         <segue destination="XfG-lQ-9wD" kind="relationship" relationship="window.shadowedContentViewController" id="cq2-FE-JQM"/>
@@ -665,10 +714,10 @@
             </objects>
             <point key="canvasLocation" x="75" y="250"/>
         </scene>
-        <!--View Controller-->
+        <!--Simulation Controller-->
         <scene sceneID="hIz-AP-VOD">
             <objects>
-                <viewController id="XfG-lQ-9wD" customClass="ViewController" customModule="Sim" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="XfG-lQ-9wD" customClass="SMSimulationController" customModule="Sim" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" id="m2S-Jp-Qdl" customClass="SMSimulation" customModule="Sim" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="0.0" width="480" height="270"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -676,7 +725,13 @@
                 </viewController>
                 <customObject id="rPt-NT-nkU" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="75" y="655"/>
+            <point key="canvasLocation" x="75" y="959"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Play" width="12" height="14"/>
+        <image name="ZoomIn" width="15" height="15"/>
+        <image name="ZoomOut" width="15" height="15"/>
+        <image name="ZoomToFit" width="16" height="14"/>
+    </resources>
 </document>
