--- a/Sim/Base.lproj/Main.storyboard
+++ b/Sim/Base.lproj/Main.storyboard
@@ -718,7 +718,7 @@
         <scene sceneID="hIz-AP-VOD">
             <objects>
                 <viewController id="XfG-lQ-9wD" customClass="SMSimulationController" customModule="Sim" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" id="m2S-Jp-Qdl" customClass="SMSimulation" customModule="Sim" customModuleProvider="target">
+                    <view key="view" id="m2S-Jp-Qdl" customClass="SMSimulationView" customModule="Sim" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="0.0" width="480" height="270"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </view>
